--- a/demo/www/templates/menu.html
+++ b/demo/www/templates/menu.html
@@ -28,7 +28,7 @@
                     Friends
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.gallery">
-                    Gallery
+                    Explore
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.login">
                     Logout
