--- a/demo/www/css/style.css
+++ b/demo/www/css/style.css
@@ -65,15 +65,38 @@ p {
 ==================================*/
 .app-icon {
     background-color: #fff;
-    background: url('../img/saplogo.png') 5% center;
+    background: url('../img/SAP_grad_R_pref.jpg') 50% center;
+    /*background-image: url('../img/SAP_grad_R_pref.jpg') ;*/
+   /*background-position: right top;*/
     background-size: cover;
     border-radius: 100%;
-    height: 125px ;
+    height: 148px;
     margin: 0 auto;
-    width: 200px;
+    width: 300px;
 }
-
+.square {
+    width: 30% !important;
+    height:0 !important;
+    padding: 0% 0 30% 0 !important;
+}
+.user-icon {
+    background-color: #fff;
+    background: url('../img/eric.jpg') 50% center;
+    /*background-image: url('../img/SAP_grad_R_pref.jpg') ;*/
+    /*background-position: right top;*/
+    background-size: cover;
+    border-radius: 100%;
+    height: 148px;
+    margin: 0 auto;
+    width: 148px;
+}
 .social-login {
     position: fixed;
     bottom: 0;
+}
+
+.card
+{
+    margin-bottom: 10px !important;
+
 }
