--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -92,18 +92,33 @@
                     <h3>280+ Joined</h3>
                     <h3 style="border-style: solid" >Jul 20,2015 - Aug 14,2015</h3>
                 </div>
+                </div>
+            <div class="card">
                 <div class="item item-divider" href="#">
                     <h3>Reviews</h3>
-                    <a class="item" >
-                    </a>
                 </div>
+                </div>
+            <div class="card">
                 <div class="item item-text-wrap" href="#">
                     <h3>Program Details</h3>
-                    <h4>Hey you - step away from your computer ,smart phone or TV screen and start moving! Compete with others and watch your step count grow</h4>
+                    <h4>Hey you - step away from your computer ,smart phone or TV screen and start moving! Compete with others and watch your step count grow.</h4>
+                </div>
+            </div>
+            <div class="card">
+                <div class="item item-text-wrap" href="#">
+                    <h3>Rewards</h3>
+                    <h4>1. 200 points for grand winner.</h4>
+                    <h4>1. 100 points for participants with 100,00 steps.</h4>
+                </div>
+                <div class="item item-divider">
+                    <h3>Recommended App</h3>
                 </div>
 
             </div>
-            
+
+            <button class="button button-block button-positive" ng-click="modal.hide()">
+                Join
+            </button>
             <!--<div class="list">-->
                 <!--<label class="item item-input">-->
                     <!--<span class="input-label">First Name</span>-->
