--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -116,7 +116,7 @@
 
             </div>
 
-            <button class="button button-block button-positive" ng-click="modal.hide()">
+            <button class="button button-full button-positive" ng-click="modal.hide()">
                 Join
             </button>
             <!--<div class="list">-->
