--- a/demo/www/templates/login.html
+++ b/demo/www/templates/login.html
@@ -1,17 +1,17 @@
 <ion-view view-title="Login" align-title="left">
-    <ion-content style="background: url(img/welcomeeric.jpg ) center; background-size: cover;">
+    <ion-content style="background: url(img/prototype/sap_app_home.jpg) center; background-size: cover;">
         <div class="hero no-header flat">
-            <div class="content">
-                <div class="app-icon"></div>
-                <h3>Empoyee Wellness Central</h3>
-            </div>
+            <!--<div class="content">-->
+                <!--<div class="app-icon"></div>-->
+                <!--<h3>Empoyee Wellness Central</h3>-->
+            <!--</div>-->
         </div>
         <div class="list">
             <ion-md-input placeholder="I-Number" highlight-color="balanced" type="text"></ion-md-input>
             <ion-md-input placeholder="Password" highlight-color="energized" type="password"></ion-md-input>
         </div>
         <div class="padding">
-            <button ui-sref="app.profile" class="button button-full button-assertive ink">Login</button>
+            <button ui-sref="app.welcomeback" class="button button-full button-assertive ink">Login</button>
         </div>
         <div class="button-bar social-login">
             <button class="button button-small button-border icon-left ion-social-google button-assertive-900">Google+</button>
