--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -1,10 +1,10 @@
 <ion-view view-title="welcome back" align-title="left">
-    <ion-content style="background: url(img/welcomeback.jpg ) 30%; background-size: cover;">
-        <div class="hero no-header flat">
-            <div class="content">
-                <div class="user-icon"></div>
-                <!--<h3>Empoyee Wellness Central</h3>-->
-            </div>
+    <ion-content style="background: url(img/prototype/sap_app_2.jpg ) 30%; background-size: cover;">
+        <div class="hero  flat">
+            <!--<div class="content">-->
+                <!--<div class="user-icon"></div>-->
+                <!--&lt;!&ndash;<h3>Empoyee Wellness Central</h3>&ndash;&gt;-->
+            <!--</div>-->
         </div>
         <div class="item card-item">
             <div  class="card stable-bg ink ink-dark">
@@ -23,13 +23,14 @@
             </div>
         </div>
 
+
         <div class="padding">
             <div class = "row text-center">
                 <div class="col ">
 
-                <button class="button square button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"></button>
-                <button class="button square button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"></button>
-                <button class="button square button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"></button>
+                <button class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/health_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
+                <button class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/fitbit_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
+                <button class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/up_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
                </div>
             </div>
             <div class = "row text-center">
@@ -41,7 +42,7 @@
 
                 <div class="col ">
 
-                    <button ui-sref="app.profile" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
+                    <button ui-sref="app.feel" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
                 </div>
             </div>
