--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -1,12 +1,12 @@
 <ion-view view-title="welcome back" align-title="left">
     <ion-content style="background: url(img/prototype/sap_app_2.jpg ) 30%; background-size: cover;">
-        <div class="hero  flat">
-            <!--<div class="content">-->
-                <!--<div class="user-icon"></div>-->
-                <!--&lt;!&ndash;<h3>Empoyee Wellness Central</h3>&ndash;&gt;-->
-            <!--</div>-->
-        </div>
-        <div class="item card-item">
+        <!--<div class="hero  flat">-->
+            <!--&lt;!&ndash;<div class="content">&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="user-icon"></div>&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;<h3>Empoyee Wellness Central</h3>&ndash;&gt;&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--</div>-->
+        <div class="item card-item" style="position: relative; top: 150px;">
             <div  class="card stable-bg ink ink-dark">
                 <div class="item  item-text-wrap">
                     <!--<span class="avatar" style="background-image: url('img/Mani.png');"></span>-->
@@ -24,7 +24,7 @@
         </div>
 
 
-        <div class="padding">
+        <div class="padding" style="position: relative; top: 150px;">
             <div class = "row text-center">
                 <div class="col ">
 
@@ -34,13 +34,13 @@
                </div>
             </div>
             <div class = "row text-center">
-                <div class="col ">
-                    <button class="button square button-clear ">health</button>
-                    <button class="button square button-clear ">Fitbit</button>
-                    <button class="button square button-clear ">Up</button>
+                <!--<div class="col ">-->
+                    <!--<button class="button square button-clear ">health</button>-->
+                    <!--<button class="button square button-clear ">Fitbit</button>-->
+                    <!--<button class="button square button-clear ">Up</button>-->
             <div class = "row text-center">
 
-                <div class="col ">
+                <div class="col " style="position: relative; top: 130px;">
 
                     <button ui-sref="app.feel" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
