--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -4,26 +4,28 @@
             <!--<h1 class="title">Expense Home</h1>-->
         <!--</ion-header-bar>-->
         <ion-content class="no-header" style="background: url(img/prototype/sap_app_3.jpg) center; background-size: cover;">
-            <div class="eag-home-container-flex">
+
+            <div class="eag-home-container-flex" style="position: relative; top: 115px;">
                 <div class="eag-home-container">
                     <div class ="row">
-                        <div class="col"><button  class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Approved</p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Quick Capture</p></div>
+                        <div class="col"><button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Pending</p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Expenses</p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Rejected</p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label">Submit</p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class = "row text-center">
 
-                        <div class="col ">
+                        <div class="col " style="position:relative;top: 40px;;">
 
                             <button ui-sref="app.profile" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
@@ -31,6 +33,7 @@
                     </div>
                 </div>
             </div>
+
         </ion-content>
     </ion-pane>
 </ion-view>
