--- a/demo/www/templates/login.html
+++ b/demo/www/templates/login.html
@@ -7,8 +7,8 @@
             <!--</div>-->
         </div>
         <div class="list">
-            <ion-md-input placeholder="I-Number" highlight-color="balanced" type="text"></ion-md-input>
-            <ion-md-input placeholder="Password" highlight-color="energized" type="password"></ion-md-input>
+            <ion-md-input placeholder="I-Number" highlight-color="royal" type="text"></ion-md-input>
+            <ion-md-input placeholder="Password" highlight-color="royal" type="password"></ion-md-input>
         </div>
         <div class="padding">
             <button ui-sref="app.welcomeback" class="button button-full button-assertive ink">Login</button>
