--- a/demo/www/css/style.css
+++ b/demo/www/css/style.css
@@ -218,3 +218,14 @@ p {
 .eag-full-width {
     width: 100%;
 }
+
+/*.item card-item*/
+/*{background-color:transparent; }*/
+/*.card_color{*/
+    /*background-color: transparent; !important;*/
+/*}*/
+
+
+/*for message bubble fucniton*/
+
+
