--- a/demo/www/templates/activity.html
+++ b/demo/www/templates/activity.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Activity">
+<ion-view view-title="Activity" style="background: url(img/prototype/sap_app_bg.jpg) center; background-size: cover;">
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
-        <div class="card">
+        <div class="card ">
             <div class="item item-text-wrap">
                 <strong>Eric</strong> How are you feel today? "
             </div>
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="item card-item">
+        <div class="item card-item ">
             <div ui-sref="app.gallery" class="card stable-bg ink ink-dark">
                 <div class="item item-avatar item-text-wrap">
                     <span class="avatar" style="background-image: url('img/Mani.png');"></span>
