--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -8,22 +8,23 @@
             <div class="eag-home-container-flex" style="position: relative; top: 115px;">
                 <div class="eag-home-container">
                     <div class ="row">
-                        <div class="col"><button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
 
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
-
-                    </div>
-                    <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="http://cdn.flaticon.com/png/256/33933.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_tired.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/exhausted.png" ></button><p class="eag-home-label"></p></div>
+
+                    </div>
+                    <div class ="row">
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_nervous.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/stressed_out.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class = "row text-center">
+
 
                         <div class="col " style="position:relative;top: 40px;;">
 
