--- a/demo/www/templates/friends.html
+++ b/demo/www/templates/friends.html
@@ -3,7 +3,7 @@
         <div class="content has-header">
             <div class="list animate-fade-slide-in-right">
 
-                <a href="#/app/profile" class="item item-avatar item-icon-right">
+                <a href="#/app/message" class="item item-avatar item-icon-right">
                     <img src="img/binduan.png">
                     <h2>Bin Duan</h2>
                     <p>Digital Technologist</p>
