--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Explore" style="background-image: url('img/sap_bg.jpg');background-size:cover;" >
+<ion-view view-title="Explore" style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" >
         <div class="list " >
             <div class="list">
@@ -72,8 +72,8 @@
         </div>
     </ion-content>
 </ion-view>
-<script id="templates/modal.html" type="text/ng-template">
-    <ion-modal-view >
+<script id="templates/modal.html" type="text/ng-template ">
+    <ion-modal-view style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
         <ion-header-bar class="bar bar-header bar-balanced">
             <!--<h1 >Group Detail</h1>-->
             <!--<a class="button icon-left ion-chevron-left button-clear button-dark">Back</a>-->
