--- a/demo/www/templates/profile.html
+++ b/demo/www/templates/profile.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Profile">
     <ion-content ng-class="{expanded:$scope.isExpanded}" >
-        <div class="hero slide-up" style="background-image: url('img/sap_bg.jpg');">
+        <div class="hero slide-up" style="background-image: url('img/prototype/sap_app_bg.jpg');">
             <div class="content">
                 <div class="avatar" style="background-image: url('img/eric.jpg');"></div>
                 <h3><a class="light">Eric Stark</a></h3>
                 <p>S.Crop.,model employee</p>
-                <h4> Point 780 |  Program 12 </h4>
+                <h4 style="color: #0074d6"> Point 780 |  Program 12 </h4>
             </div>
         </div>
         <div class="tabs tabs-positive tabs-icon-top static">
