--- a/demo/www/lib/ionic/css/ionic.css
+++ b/demo/www/lib/ionic/css/ionic.css
@@ -5316,7 +5316,8 @@ a.item-content {
 .card {
   padding-top: 1px;
   padding-bottom: 1px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
   .card .item {
     border-left: 0;
     border-right: 0; }
