--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -6,8 +6,8 @@
                 <!--&lt;!&ndash;&lt;!&ndash;<h3>Empoyee Wellness Central</h3>&ndash;&gt;&ndash;&gt;-->
             <!--&lt;!&ndash;</div>&ndash;&gt;-->
         <!--</div>-->
-        <div class="item card-item" style="position: relative; top: 150px;">
-            <div  class="card stable-bg ink ink-dark">
+        <div class="item card-item" style="position: relative; top: 150px; ">
+            <div  class="card stable-bg ink ink-dark" style="background-color: transparent;">
                 <div class="item  item-text-wrap">
                     <!--<span class="avatar" style="background-image: url('img/Mani.png');"></span>-->
                     Connect your favorite apps to get a complete picture of your wellness.
@@ -40,7 +40,7 @@
                     <!--<button class="button square button-clear ">Up</button>-->
             <div class = "row text-center">
 
-                <div class="col " style="position: relative; top: 130px;">
+                <div class="col " style="position: relative; top: 100px;">
 
                     <button ui-sref="app.feel" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
