add new dash boards

--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -8,7 +8,8 @@
             <div class="eag-home-container-flex" style="position: relative; top: 115px;">
                 <div class="eag-home-container">
                     <div class ="row">
-                        <div class="col"><button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col">
+                            <button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
 
                         <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label"></p></div>
 
