--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -110,8 +110,13 @@
                     <h4>1. 200 points for grand winner.</h4>
                     <h4>1. 100 points for participants with 100,00 steps.</h4>
                 </div>
+            </div>
+
+            <div class="card">
+
                 <div class="item item-divider">
                     <h3>Recommended App</h3>
+                    <h4>Apple Watch</h4>
                 </div>
 
             </div>
