--- a/demo/www/templates/login.html
+++ b/demo/www/templates/login.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Login" align-title="left">
     <ion-content style="background: url(img/prototype/sap_app_home.jpg) center; background-size: cover;">
         <div class="hero no-header flat">
-            <!--<div class="content">-->
+            <div class="content">
                 <!--<div class="app-icon"></div>-->
-                <!--<h3>Empoyee Wellness Central</h3>-->
-            <!--</div>-->
+                <h2 style="color: white" >Path to Wellness</h2>
+            </div>
         </div>
         <div class="list">
             <ion-md-input placeholder="I-Number" highlight-color="royal" type="text"></ion-md-input>
