--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -34,10 +34,10 @@
                </div>
             </div>
             <div class = "row text-center">
-                <!--<div class="col ">-->
-                    <!--<button class="button square button-clear ">health</button>-->
-                    <!--<button class="button square button-clear ">Fitbit</button>-->
-                    <!--<button class="button square button-clear ">Up</button>-->
+                <div class="col ">
+                    <button class="button square button-clear " style="color: white">health</button>
+                    <button class="button square button-clear "style="color: white">Fitbit</button>
+                    <button class="button square button-clear "style="color: white">Up</button>
             <div class = "row text-center">
 
                 <div class="col " style="position: relative; top: 100px;">
