--- a/demo/www/templates/friends.html
+++ b/demo/www/templates/friends.html
@@ -1,43 +1,43 @@
 <ion-view view-title="Friends">
-    <ion-content ng-class="{expanded:isExpanded}">
+    <ion-content ng-class="{expanded:isExpanded}" style="background-image: url('img/prototype/sap_app_bg.jpg');"
         <div class="content has-header">
             <div class="list animate-fade-slide-in-right">
 
-                <a href="#/app/message" class="item item-avatar item-icon-right">
-                    <img src="img/binduan.png">
+                <a href="#/app/message" class=" item item-avatar item-icon-right">
+                    <img src="img/binduan.png" ">
                     <h2>Bin Duan</h2>
                     <p>Digital Technologist</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">90,000</i>
                 </a>
                 <a href="#/app/profile" class="item item-avatar item-icon-right">
                     <img src="img/yixiaosong.png">
                     <h2>Yixiao Song</h2>
                     <p>Developer</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">89,274</i>
                 </a>
                 <a href="#/app/profile" class="item item-avatar item-icon-right">
                     <img src="img/armando.png">
                     <h2>Armando Chavez</h2>
                     <p>Product Management</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">88,945</i>
                 </a>
                 <a href="#/app/profile" class="item item-avatar item-icon-right">
                     <img src="img/Mani.png">
                     <h2>Mani Kak</h2>
                     <p>Product Management</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">88,322</i>
                 </a>
                 <a href="#/app/profile" class="item item-avatar item-icon-right">
                     <img src="img/Gustavo.png">
                     <h2>Gustavo Tamae Kakazu</h2>
                     <p>Business Operations</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">88,146</i>
                 </a>
                 <a href="#/app/profile" class="item item-avatar item-icon-right">
                     <img src="img/wangfeifei.jpg">
                     <h2>Feifei Wang</h2>
                     <p>User Experience Designer</p>
-                    <i class="icon ion-chatbubble muted"></i>
+                    <i class="icon" style="font-size: inherit">88,015</i>
                 </a>
             </div>
         </div>
