--- a/demo/www/templates/profile.html
+++ b/demo/www/templates/profile.html
@@ -1,5 +1,6 @@
-<ion-view view-title="Profile">
-    <ion-content ng-class="{expanded:$scope.isExpanded}" >
+<ion-view view-title="Home">
+    <ion-content ng-class="{expanded:$scope.isExpanded}" style="background-image: url('img/prototype/sap_app_bg.jpg');">
+
         <div class="hero slide-up" style="background-image: url('img/prototype/sap_app_bg.jpg');">
             <div class="content">
                 <div class="avatar" style="background-image: url('img/eric.jpg');"></div>
@@ -8,56 +9,142 @@
                 <h4 style="color: #0074d6"> Point 780 |  Program 12 </h4>
             </div>
         </div>
-        <div class="tabs tabs-positive tabs-icon-top static">
+        <div class="tabs tabs-positive tabs-icon-top static" >
             <a ui-sref="app.activity" class="tab-item">
                 <i class="icon ion-arrow-graph-up-right"></i> Activity
+            </a>
+            <a ui-sref="app.gallery" class="tab-item">
+                <i class="icon ion-ios-bookmarks"></i> Explore
+            </a>
+            <a ui-sref="app.redeem" class="tab-item">
+                <i class="icon ion-android-checkmark-circle"></i> Redeem
             </a>
             <a ui-sref="app.friends" class="tab-item">
                 <i class="icon ion-android-people"></i> Friends
             </a>
-            <a ui-sref="app.gallery" class="tab-item">
-                <i class="icon ion-images"></i> Explore
-            </a>
+
         </div>
 
-        <h4 class="content padding double-padding-x">Following</h4>
+        <!--<h4 class="content padding double-padding-x">Following</h4>-->
         <div class="list animate-fade-slide-in-right">
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/binduan.png">
-                <h2>Bin Duan</h2>
-                <p>Point 780 |  Program 12 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/yixiaosong.png">
-                <h2>Yixiao Song</h2>
-                <p>Point 780 |  Program 1 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/armando.png">
-                <h2>Armando Chavez</h2>
-                <p>Point 500 |  Program 12 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/Mani.png">
-                <h2>Mani Kak</h2>
-                <p>Point 1200 |  Program 15 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/Gustavo.png">
-                <h2>Gustavo Tamae Kakazu</h2>
-                <p>Point 500 |  Program 1 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
-            <a ui-sref="app.friends" class="item item-avatar item-icon-right">
-                <img src="img/wangfeifei.jpg">
-                <h2>Feifei Wang</h2>
-                <p>Point 700 |  Program 10 </p>
-                <i class="icon ion-chatbubble muted"></i>
-            </a>
+
+            <!-- area chart -->
+            <div class="card">
+                <!--<div class="item item-divider item-calm">-->
+                    <!--<div class="centerfont">-->
+                        <!--<i class="icon ion-earth"></i>-->
+                    <!--</div>-->
+
+                <div class="item item-text-wrap" style="padding-bottom:0px;padding-top:0px">
+
+
+                    <highchart config="chartarea" class="Chartcenter"></highchart>
+
+                </div>
+            </div>
+                <!--<div class="item item-divider ">-->
+
+                <!--</div>-->
+
+            <!-- area chart -->
+            <div class="card">
+                <div class="item item-divider">
+                    <div class="centerfont">
+                        <!--<i class="icon ion-earth"></i>-->
+                        <h2>Walk your way to Health</h2>
+                    </div>
+                    <div class="centerfont">
+                        <!--<i class="icon ion-earth"></i>-->
+                        <h3>100 steps Left | 200 Point Gained</h3>
+                    </div>
+
+                    <div class="item item-divider ">
+
+                    </div>
+
+                </div>
+                <div class="item item-text-wrap" >
+
+
+                    <highchart config="chartPie" class="Chartcenter"></highchart>
+                    <div class="centerfont">
+                        <!--<i class="icon ion-earth"></i>-->
+                        <h4>Rank: #65</h4>
+                    </div>
+                </div>
+
+            </div>
+            <!-- Pie chart-->
+
+
+            <!-- Donut     -->
+            <div class="card">
+                <!--<div class="item item-divider item-calm">-->
+                    <!--<div class="centerfont">-->
+                        <!--<i class="icon ion-earth"></i>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="item item-divider">
+                    <div class="centerfont">
+                        <!--<i class="icon ion-earth"></i>-->
+                        <h2>Assessments</h2>
+                    </div>
+                    <div class="centerfont">
+                        <!--<i class="icon ion-earth"></i>-->
+                        <h3>1 questionnaire Left | 400 Point Gained</h3>
+                    </div>
+
+                    <div class="item item-divider ">
+
+                    </div>
+
+                </div>
+                <div class="item item-text-wrap" >
+
+
+                    <highchart config="chartDonut"></highchart>
+
+                </div>
+                <div class="item item-divider ">
+
+                </div>
+            </div>
         </div>
+            <!--<a ui-sref="app.dash" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/binduan.png">-->
+                <!--<h2>Bin Duan</h2>-->
+                <!--<p>Point 780 |  Program 12 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
+            <!--<a ui-sref="app.friends" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/yixiaosong.png">-->
+                <!--<h2>Yixiao Song</h2>-->
+                <!--<p>Point 780 |  Program 1 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
+            <!--<a ui-sref="app.friends" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/armando.png">-->
+                <!--<h2>Armando Chavez</h2>-->
+                <!--<p>Point 500 |  Program 12 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
+            <!--<a ui-sref="app.friends" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/Mani.png">-->
+                <!--<h2>Mani Kak</h2>-->
+                <!--<p>Point 1200 |  Program 15 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
+            <!--<a ui-sref="app.friends" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/Gustavo.png">-->
+                <!--<h2>Gustavo Tamae Kakazu</h2>-->
+                <!--<p>Point 500 |  Program 1 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
+            <!--<a ui-sref="app.friends" class="item item-avatar item-icon-right">-->
+                <!--<img src="img/wangfeifei.jpg">-->
+                <!--<h2>Feifei Wang</h2>-->
+                <!--<p>Point 700 |  Program 10 </p>-->
+                <!--<i class="icon ion-chatbubble muted"></i>-->
+            <!--</a>-->
     </ion-content>
 </ion-view>
